// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-indépendant > Année incomplète 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: undefined
dirigeant . rémunération . cotisations: undefined
dirigeant . rémunération . net: undefined
dirigeant . rémunération . net . après impôt: undefined
dirigeant . rémunération . totale: undefined
entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined"
`;

exports[`calculate simulations-indépendant > Année incomplète 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 2097
dirigeant . rémunération . cotisations: 1703
dirigeant . rémunération . net: 2000
dirigeant . rémunération . net . après impôt: 2000
dirigeant . rémunération . totale: 3703
entreprise . charges: 0
entreprise . chiffre d'affaires: 3703
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > Année incomplète 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 5193
dirigeant . rémunération . cotisations: 2242
dirigeant . rémunération . net: 5000
dirigeant . rémunération . net . après impôt: 5000
dirigeant . rémunération . totale: 7242
entreprise . charges: 0
entreprise . chiffre d'affaires: 7242
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > Année incomplète 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 10382
dirigeant . rémunération . cotisations: 4195
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
dirigeant . rémunération . totale: 14195
entreprise . charges: 0
entreprise . chiffre d'affaires: 14195
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > Année incomplète 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 103803
dirigeant . rémunération . cotisations: 40189
dirigeant . rémunération . net: 100000
dirigeant . rémunération . net . après impôt: 73496
dirigeant . rémunération . totale: 140189
entreprise . charges: 0
entreprise . chiffre d'affaires: 140189
impôt . montant: 26504"
`;

exports[`calculate simulations-indépendant > Année incomplète 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 1033726
dirigeant . rémunération . cotisations: 242158
dirigeant . rémunération . net: 1000000
dirigeant . rémunération . net . après impôt: 529241
dirigeant . rémunération . totale: 1242158
entreprise . charges: 0
entreprise . chiffre d'affaires: 1242158
impôt . montant: 470759"
`;

exports[`calculate simulations-indépendant > DROM 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: undefined
dirigeant . rémunération . cotisations: undefined
dirigeant . rémunération . net: undefined
dirigeant . rémunération . net . après impôt: undefined
dirigeant . rémunération . totale: 20000
entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined

Notifications affichées : dirigeant . indépendant . cotisations et contributions . exonérations . DROM"
`;

exports[`calculate simulations-indépendant > acre 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: 1609
dirigeant . indépendant . revenu professionnel: 51978
dirigeant . rémunération . cotisations: 22950
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41241
dirigeant . rémunération . totale: 72950
entreprise . charges: 0
entreprise . chiffre d'affaires: 72950
impôt . montant: 8759"
`;

exports[`calculate simulations-indépendant > activité 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20764
dirigeant . rémunération . cotisations: 8252
dirigeant . rémunération . net: 20000
dirigeant . rémunération . net . après impôt: 19408
dirigeant . rémunération . totale: 28252
entreprise . charges: 0
entreprise . chiffre d'affaires: 28252
impôt . montant: 592"
`;

exports[`calculate simulations-indépendant > activité 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20764
dirigeant . rémunération . cotisations: 8271
dirigeant . rémunération . net: 20000
dirigeant . rémunération . net . après impôt: 19408
dirigeant . rémunération . totale: 28271
entreprise . charges: 0
entreprise . chiffre d'affaires: 28271
impôt . montant: 592"
`;

exports[`calculate simulations-indépendant > années précédentes 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 51974
dirigeant . rémunération . cotisations: 22810
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 40814
dirigeant . rémunération . totale: 72810
entreprise . charges: 0
entreprise . chiffre d'affaires: 72810
impôt . montant: 9186"
`;

exports[`calculate simulations-indépendant > années précédentes 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 41594
dirigeant . rémunération . cotisations: 18798
dirigeant . rémunération . net: 40000
dirigeant . rémunération . net . après impôt: 33600
dirigeant . rémunération . totale: 58798
entreprise . charges: 0
entreprise . chiffre d'affaires: 58798
impôt . montant: 6400"
`;

exports[`calculate simulations-indépendant > années précédentes 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: 3548
dirigeant . indépendant . revenu professionnel: 31191
dirigeant . rémunération . cotisations: 13973
dirigeant . rémunération . net: 30000
dirigeant . rémunération . net . après impôt: 26637
dirigeant . rémunération . totale: 43973
entreprise . charges: 0
entreprise . chiffre d'affaires: 43973
impôt . montant: 3363"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52104
dirigeant . rémunération . cotisations: 27637
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41203
dirigeant . rémunération . totale: 77637
entreprise . charges: 0
entreprise . chiffre d'affaires: 77637
impôt . montant: 8797"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52117
dirigeant . rémunération . cotisations: 28120
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41199
dirigeant . rémunération . totale: 78120
entreprise . charges: 0
entreprise . chiffre d'affaires: 78120
impôt . montant: 8801"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52185
dirigeant . rémunération . cotisations: 30637
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41179
dirigeant . rémunération . totale: 80637
entreprise . charges: 0
entreprise . chiffre d'affaires: 80637
impôt . montant: 8821"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52005
dirigeant . rémunération . cotisations: 24014
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41233
dirigeant . rémunération . totale: 74014
entreprise . charges: 0
entreprise . chiffre d'affaires: 74014
impôt . montant: 8767"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52005
dirigeant . rémunération . cotisations: 24013
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41233
dirigeant . rémunération . totale: 74013
entreprise . charges: 0
entreprise . chiffre d'affaires: 74013
impôt . montant: 8767"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 517914
dirigeant . rémunération . cotisations: 159890
dirigeant . rémunération . net: 500000
dirigeant . rémunération . net . après impôt: 281989
dirigeant . rémunération . totale: 659890
entreprise . charges: 0
entreprise . chiffre d'affaires: 659890
impôt . montant: 218011"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 18165
dirigeant . rémunération . cotisations: 12647
dirigeant . rémunération . net: 17353
dirigeant . rémunération . net . après impôt: 17177
dirigeant . rémunération . totale: 30000
entreprise . charges: 0
entreprise . chiffre d'affaires: 30000
impôt . montant: 176"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 17993
dirigeant . rémunération . cotisations: 13847
dirigeant . rémunération . net: 16153
dirigeant . rémunération . net . après impôt: 16004
dirigeant . rémunération . totale: 30000
entreprise . charges: 0
entreprise . chiffre d'affaires: 30000
impôt . montant: 149"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20964
dirigeant . rémunération . cotisations: 9847
dirigeant . rémunération . net: 20153
dirigeant . rémunération . net . après impôt: 19529
dirigeant . rémunération . totale: 30000
entreprise . charges: 0
entreprise . chiffre d'affaires: 30000
impôt . montant: 624"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 14194
dirigeant . rémunération . cotisations: 6346
dirigeant . rémunération . net: 13654
dirigeant . rémunération . net . après impôt: 13654
dirigeant . rémunération . totale: 20000
entreprise . charges: 0
entreprise . chiffre d'affaires: 20000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 226711
dirigeant . rémunération . cotisations: 81432
dirigeant . rémunération . net: 218568
dirigeant . rémunération . net . après impôt: 139815
dirigeant . rémunération . totale: 300000
entreprise . charges: 0
entreprise . chiffre d'affaires: 300000
impôt . montant: 78753"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 223211
dirigeant . rémunération . cotisations: 84932
dirigeant . rémunération . net: 215068
dirigeant . rémunération . net . après impôt: 137890
dirigeant . rémunération . totale: 300000
entreprise . charges: 0
entreprise . chiffre d'affaires: 300000
impôt . montant: 77178"
`;

exports[`calculate simulations-indépendant > cotisations forfaitaires début d'activité 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: 3403
dirigeant . indépendant . revenu professionnel: 35678
dirigeant . rémunération . cotisations: 15676
dirigeant . rémunération . net: 34324
dirigeant . rémunération . net . après impôt: 30455
dirigeant . rémunération . totale: 50000
entreprise . charges: 0
entreprise . chiffre d'affaires: 50000
impôt . montant: 3869"
`;

exports[`calculate simulations-indépendant > cotisations minimales 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 137
dirigeant . rémunération . cotisations: 1364
dirigeant . rémunération . net: 100
dirigeant . rémunération . net . après impôt: 100
dirigeant . rémunération . totale: 1464
entreprise . charges: 0
entreprise . chiffre d'affaires: 1464
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > cotisations minimales 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 104
dirigeant . rémunération . cotisations: 158
dirigeant . rémunération . net: 100
dirigeant . rémunération . net . après impôt: 100
dirigeant . rémunération . totale: 258
entreprise . charges: 0
entreprise . chiffre d'affaires: 258
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > cotisations minimales 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 830
dirigeant . rémunération . cotisations: 439
dirigeant . rémunération . net: 800
dirigeant . rémunération . net . après impôt: 800
dirigeant . rémunération . totale: 1239
entreprise . charges: 0
entreprise . chiffre d'affaires: 1239
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 41485
dirigeant . rémunération . cotisations: 4734
dirigeant . rémunération . net: 40266
dirigeant . rémunération . net . après impôt: 34655
dirigeant . rémunération . totale: 45000
entreprise . charges: 0
entreprise . chiffre d'affaires: 45000
impôt . montant: 5611"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 7001
dirigeant . rémunération . cotisations: 2240
dirigeant . rémunération . net: 6760
dirigeant . rémunération . net . après impôt: 6760
dirigeant . rémunération . totale: 9000
entreprise . charges: 0
entreprise . chiffre d'affaires: 9000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: 984
dirigeant . indépendant . revenu professionnel: 9253
dirigeant . rémunération . cotisations: 1015
dirigeant . rémunération . net: 8985
dirigeant . rémunération . net . après impôt: 8985
dirigeant . rémunération . totale: 10000
entreprise . charges: 0
entreprise . chiffre d'affaires: 10000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 13356
dirigeant . rémunération . cotisations: 2048
dirigeant . rémunération . net: 12952
dirigeant . rémunération . net . après impôt: 12952
dirigeant . rémunération . totale: 15000
entreprise . charges: 0
entreprise . chiffre d'affaires: 15000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > exonération âge 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 39518
dirigeant . rémunération . cotisations: 16972
dirigeant . rémunération . net: 38028
dirigeant . rémunération . net . après impôt: 33007
dirigeant . rémunération . totale: 55000
entreprise . charges: 0
entreprise . chiffre d'affaires: 55000
impôt . montant: 5021"
`;

exports[`calculate simulations-indépendant > imposition à l'IS 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 72019
dirigeant . rémunération . cotisations: 30693
dirigeant . rémunération . net: 69307
dirigeant . rémunération . net . après impôt: 56696
dirigeant . rémunération . totale: 100000
entreprise . charges: 0
entreprise . chiffre d'affaires: 100000
impôt . montant: 12611"
`;

exports[`calculate simulations-indépendant > imposition à l'IS 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 72019
dirigeant . rémunération . cotisations: 30693
dirigeant . rémunération . net: 69307
dirigeant . rémunération . net . après impôt: 56696
dirigeant . rémunération . totale: 100000
entreprise . charges: 0
entreprise . chiffre d'affaires: 100000
impôt . montant: 12611"
`;

exports[`calculate simulations-indépendant > impôt sur le revenu 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20764
dirigeant . rémunération . cotisations: 8252
dirigeant . rémunération . net: 20000
dirigeant . rémunération . net . après impôt: 17924
dirigeant . rémunération . totale: 28252
entreprise . charges: 0
entreprise . chiffre d'affaires: 28252
impôt . montant: 2076"
`;

exports[`calculate simulations-indépendant > inversions 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 607
dirigeant . rémunération . cotisations: 1444
dirigeant . rémunération . net: 556
dirigeant . rémunération . net . après impôt: 556
dirigeant . rémunération . totale: 2000
entreprise . charges: 0
entreprise . chiffre d'affaires: 2000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > inversions 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 42577
dirigeant . rémunération . cotisations: 19049
dirigeant . rémunération . net: 40951
dirigeant . rémunération . net . après impôt: 36290
dirigeant . rémunération . totale: 60000
entreprise . charges: 0
entreprise . chiffre d'affaires: 60001
impôt . montant: 4661"
`;

exports[`calculate simulations-indépendant > inversions 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 10382
dirigeant . rémunération . cotisations: 4195
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
dirigeant . rémunération . totale: 14195
entreprise . charges: 0
entreprise . chiffre d'affaires: 14195
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > inversions 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 10382
dirigeant . rémunération . cotisations: 4195
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
dirigeant . rémunération . totale: 14195
entreprise . charges: 1000
entreprise . chiffre d'affaires: 15195
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > inversions 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 42157
dirigeant . rémunération . cotisations: 18840
dirigeant . rémunération . net: 40548
dirigeant . rémunération . net . après impôt: 36000
dirigeant . rémunération . totale: 59388
entreprise . charges: 0
entreprise . chiffre d'affaires: 59389
impôt . montant: 4548"
`;

exports[`calculate simulations-indépendant > inversions 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 13952
dirigeant . rémunération . cotisations: 5561
dirigeant . rémunération . net: 13439
dirigeant . rémunération . net . après impôt: 13439
dirigeant . rémunération . totale: 19000
entreprise . charges: 1000
entreprise . chiffre d'affaires: 20000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > inversions 7`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 13208
dirigeant . rémunération . cotisations: 5278
dirigeant . rémunération . net: 12722
dirigeant . rémunération . net . après impôt: 12722
dirigeant . rémunération . totale: 18000
entreprise . charges: 2000
entreprise . chiffre d'affaires: 20000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 549
dirigeant . rémunération . cotisations: 1434
dirigeant . rémunération . net: 500
dirigeant . rémunération . net . après impôt: 500
dirigeant . rémunération . totale: 1934
entreprise . charges: 0
entreprise . chiffre d'affaires: 1934
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 1065
dirigeant . rémunération . cotisations: 1524
dirigeant . rémunération . net: 1000
dirigeant . rémunération . net . après impôt: 1000
dirigeant . rémunération . totale: 2524
entreprise . charges: 0
entreprise . chiffre d'affaires: 2524
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 1581
dirigeant . rémunération . cotisations: 1614
dirigeant . rémunération . net: 1500
dirigeant . rémunération . net . après impôt: 1500
dirigeant . rémunération . totale: 3114
entreprise . charges: 0
entreprise . chiffre d'affaires: 3114
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 2097
dirigeant . rémunération . cotisations: 1703
dirigeant . rémunération . net: 2000
dirigeant . rémunération . net . après impôt: 2000
dirigeant . rémunération . totale: 3703
entreprise . charges: 0
entreprise . chiffre d'affaires: 3703
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 5193
dirigeant . rémunération . cotisations: 2242
dirigeant . rémunération . net: 5000
dirigeant . rémunération . net . après impôt: 5000
dirigeant . rémunération . totale: 7242
entreprise . charges: 0
entreprise . chiffre d'affaires: 7242
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 10382
dirigeant . rémunération . cotisations: 4195
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
dirigeant . rémunération . totale: 14195
entreprise . charges: 0
entreprise . chiffre d'affaires: 14195
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 7`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 103803
dirigeant . rémunération . cotisations: 40189
dirigeant . rémunération . net: 100000
dirigeant . rémunération . net . après impôt: 73496
dirigeant . rémunération . totale: 140189
entreprise . charges: 0
entreprise . chiffre d'affaires: 140189
impôt . montant: 26504"
`;

exports[`calculate simulations-indépendant > échelle de revenus 8`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 1033726
dirigeant . rémunération . cotisations: 242158
dirigeant . rémunération . net: 1000000
dirigeant . rémunération . net . après impôt: 529241
dirigeant . rémunération . totale: 1242158
entreprise . charges: 0
entreprise . chiffre d'affaires: 1242158
impôt . montant: 470759"
`;
